- Show better title text on Economy colour blocks - Use ratios from Spansh results in Economy colour blocks - Use a hand if an icon is within a button In WhereToBuy:     - Show (smaller) Economy colour blocks     - Show bubbles for all commodities at the top, with a count of what is needed + grey if not available at any found market     - Make initial label an expand/collapse button for those bubbles - Log but suppress errors from auto-updates on project page - Extend 1 hour window for auto-refreshing each time we fetch a project - Stop showing the faction ... it's always Brewer :/ - Stop showing "Time remaining:" if a project is complete

--- a/src/App.css
+++ b/src/App.css
@@ -182,6 +182,10 @@ i {
   cursor: default;
 }
 
+button i {
+  cursor: pointer;
+}
+
 i.icon-inline {
   position: relative;
   top: 2px;
